# Distributed-Document-Classifier

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  install_mpich.sh
core/: classifier.c  profile.c
docs/: Doxyfile  Doxyfile.bak  mainpage.dox
docs/figures/: flow.dot
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_000003_000002.html  dir_052c4c887fa978e0099d496a71fe6468.html  dir_052c4c887fa978e0099d496a71fe6468.js  dir_052c4c887fa978e0099d496a71fe6468_dep.map  dir_052c4c887fa978e0099d496a71fe6468_dep.md5  dir_08b97023a9b951b503b91410bb0bc7d5.html  dir_08b97023a9b951b503b91410bb0bc7d5.js  dir_08b97023a9b951b503b91410bb0bc7d5_dep.map  dir_1a867d65ee65824ba6527bb8327e2279.html  dir_1a867d65ee65824ba6527bb8327e2279.js  dir_1a867d65ee65824ba6527bb8327e2279_dep.map  dir_1a867d65ee65824ba6527bb8327e2279_dep.md5  dir_c9d473842f39844af6ca123d8bd5d818.html  dir_c9d473842f39844af6ca123d8bd5d818_dep.map  dir_c9d473842f39844af6ca123d8bd5d818_dep.md5  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js
docs/html/d0/d29/: main_8c.html  main_8c_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  main_8c_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  main_8c_source.html
docs/html/d0/db9/: classifier_8c.html  classifier_8c.js  classifier_8c_a34d7a99c1b14f5a3da44dc698c1f3bcb_icgraph.map  classifier_8c_a34d7a99c1b14f5a3da44dc698c1f3bcb_icgraph.md5  classifier_8c_source.html
docs/html/d1/d9d/: file__utils_8h.html  file__utils_8h.js  file__utils_8h_a07982d8fbcce521936640f6b39550dad_icgraph.md5  file__utils_8h_a9cef8f76bf0bbcbbc225ed062b5d8d15_cgraph.map  file__utils_8h_a9cef8f76bf0bbcbbc225ed062b5d8d15_cgraph.md5  file__utils_8h_a9cef8f76bf0bbcbbc225ed062b5d8d15_icgraph.map  file__utils_8h_a9cef8f76bf0bbcbbc225ed062b5d8d15_icgraph.md5  file__utils_8h_a9e7c1dc86cc9f5060dc30988f68aeb76_cgraph.map  file__utils_8h_a9e7c1dc86cc9f5060dc30988f68aeb76_icgraph.map  file__utils_8h_a9e7c1dc86cc9f5060dc30988f68aeb76_icgraph.md5  file__utils_8h_aa06b061afa3a76842fb0de418d69fab4_icgraph.map  file__utils_8h_aa06b061afa3a76842fb0de418d69fab4_icgraph.md5  file__utils_8h_af2d299fe865532706c80ab701585b877_icgraph.map  file__utils_8h_af60f33bb7908850bdcf52ebe9f49d310_icgraph.map  file__utils_8h_af60f33bb7908850bdcf52ebe9f49d310_icgraph.md5  file__utils_8h_source.html
docs/html/d2/d81/: msg__consts_8h.html  msg__consts_8h.js  msg__consts_8h_source.html
docs/html/d2/daf/: hash__table_8c.html  hash__table_8c.js  hash__table_8c_a02829007f61a93c496676c28e3a4cc60_icgraph.map  hash__table_8c_a02829007f61a93c496676c28e3a4cc60_icgraph.md5  hash__table_8c_a09866b547c82fa1cf347fe26223f9f51_cgraph.map  hash__table_8c_a09866b547c82fa1cf347fe26223f9f51_cgraph.md5  hash__table_8c_a09866b547c82fa1cf347fe26223f9f51_icgraph.map  hash__table_8c_a09866b547c82fa1cf347fe26223f9f51_icgraph.md5  hash__table_8c_a2512fdab32c231a3a2e5621cb1e309c9_icgraph.map  hash__table_8c_a4c463db37a1ef64d9f98543215c06426_icgraph.map  hash__table_8c_a4c463db37a1ef64d9f98543215c06426_icgraph.md5  hash__table_8c_ad0fdb05352f003d01650380f878c5059_icgraph.map  hash__table_8c_source.html
docs/html/d4/d10/: main_8c__incl.map  main_8c__incl.md5  manager_8c.html  manager_8c.js  manager_8c_source.html
docs/html/d4/d7e/: manager_8h__dep__incl.map  manager_8h__dep__incl.md5
docs/html/d4/d9b/: file__utils_8h__dep__incl.map  file__utils_8h__dep__incl.md5
docs/html/d4/dc2/: classifier_8c__incl.map  classifier_8c__incl.md5
docs/html/d4/ddb/: hash__table_8h.html  hash__table_8h.js  hash__table_8h_a02829007f61a93c496676c28e3a4cc60_cgraph.map  hash__table_8h_a02829007f61a93c496676c28e3a4cc60_cgraph.md5  hash__table_8h_a02829007f61a93c496676c28e3a4cc60_icgraph.map  hash__table_8h_a09866b547c82fa1cf347fe26223f9f51_icgraph.map  hash__table_8h_a09866b547c82fa1cf347fe26223f9f51_icgraph.md5  hash__table_8h_a2512fdab32c231a3a2e5621cb1e309c9_icgraph.map  hash__table_8h_a2512fdab32c231a3a2e5621cb1e309c9_icgraph.md5  hash__table_8h_a4c463db37a1ef64d9f98543215c06426_icgraph.md5  hash__table_8h_ad0fdb05352f003d01650380f878c5059_icgraph.md5  hash__table_8h_source.html
docs/html/d5/d30/: file__utils_8c__incl.map  file__utils_8c__incl.md5
docs/html/d5/d4d/: mainpage_8dox.html
docs/html/d5/d5e/: file__utils_8c.html  file__utils_8c.js  (+10 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  files_0.js  files_2.js  files_3.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+9 more)
docs/latex/: annotated.tex  dir_052c4c887fa978e0099d496a71fe6468.tex  dir_052c4c887fa978e0099d496a71fe6468_dep.md5  dir_08b97023a9b951b503b91410bb0bc7d5.tex  dir_08b97023a9b951b503b91410bb0bc7d5_dep.md5  dir_1a867d65ee65824ba6527bb8327e2279.tex  dir_c9d473842f39844af6ca123d8bd5d818.tex  files.tex  index.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
example/: dict.txt
example/input/: doc1.txt  doc2.txt  doc3.txt  doc4.txt  doc5.txt  doc6.txt  doc7.txt  doc8.txt
example/output/: result.txt
include/: classifier.h  file_utils.h  gaspi_utils.h  hash_table.h  io_utils.h  manager.h  mpi_utils.h  msg_consts.h  profile.h  utils.h  worker.h
lib/: hash_table.c  io_utils.c  mpi_utils.c
make/: build.mk  common.mk  docs.mk  run.mk  test.mk
scripts/: gaspi_wrapper.sh  gen_data.py  install_mpich.sh
src/: classifier.c  file_utils.c  gaspi_utils.c  hash_table.c  main.c  manager.c  utils.c  worker.c
tests/: test_classification.c
tests/include/: utils.h
tests/src/: test_classifier.c  test_file_utils.c  test_hash_table.c  utils.c
(+136 files in other folders)
